add new endpoints and prep for deployment.
